updated viewport tag

--- a/videopage.html
+++ b/videopage.html
@@ -4,7 +4,7 @@
 	<title>WE MISS YOU JULIE! | Videos</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="js/content.js"></script>
 	<script src="js/scriptVid.js"></script>
 </head>
